--- a/src/cake/bundler/template/Dockerfile.jinja2
+++ b/src/cake/bundler/template/Dockerfile.jinja2
@@ -10,7 +10,13 @@
 FROM ros:galactic-ros-base-focal
 RUN apt-get update
 RUN apt-get install -y python3-pip
+{% if local_crl -%}
+COPY crl /crl
+WORKDIR /crl
+RUN pip3 install .
+{% else -%}
 RUN pip3 install git+https://github.com/CakeRobotics/crl
+{% endif -%}
 {% if pip_requirements -%}
 RUN pip3 install {{ pip_requirements | join(' ') }}
 {% endif -%}
